# pruning

./: .gitignore  README.md  pyproject.toml
experiments/imagenet/torch-nn/: classes.py  finetune_eval.py  imgnet1k_base_prune.py  imgnet1k_iterative_finetune.py  imgnet1k_prune_finetune.py  imgnet1k_search.py  imgnet1k_utils.py
output/: sensitivity_results.json
prune/: classes.py  per_layer_pruning_ratio.py  run_prune.py  utils.py  visualize.py
src/pruning/: pruners.py  utils.py  viz.py
