[project]
name = "pruning"
version = "0.1.0"
description = "Pruning models"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
  "black>=25.1.0",
  "lightning>=2.5.0.post0",
  "timm>=1.0.15",
  "torch-pruning>=1.5.1",
  "torch==2.6.0+cu124",
  "torchvision==0.21.0+cu124",
  "transformers>=4.49.0",
  "scikit-learn>=1.6.1",
  "datasets>=3.3.2",
  "notebook>=7.3.2",
  "torchprofile>=0.0.4",
  "matplotlib>=3.10.1",
  "ruff>=0.9.10",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124"},
]
torchvision = [
  { index = "pytorch-cu124"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124/"
explicit = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  
    "W",  
    "F",  
    "I",
    "C",  
    "B",
    "PYI",  
    "RUF",
    "SIM",
    "UP", 
    "ANN",
]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
section-order = ["first-party", "local-folder", "third-party"]